[package]
name = "stellar_recrypt"
version = "0.1.0"
edition = "2021"
description = "Stellar-oriented Proxy Re-Encryption (PRE) with HKDF-isolated Alice keys and Bob G... rekey targets"
license = "MIT OR Apache-2.0"
keywords = ["stellar", "pre", "proxy-re-encryption", "ed25519", "x25519"]
categories = ["cryptography"]
readme = "README.md"

[dependencies]
curve25519-dalek = { version = "4", features = ["rand_core", "digest"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
hkdf = "0.12"
chacha20poly1305 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1", features = ["derive"] }
thiserror = "1"
subtle = "2"

[dev-dependencies]
hex = "0.4"

[[example]]
name = "basic"
path = "examples/basic.rs"
